--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.27",
-    "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
-    "@reduxjs/toolkit": "^1.2.5",
+    "@reduxjs/toolkit": "^1.3.2",
     "@syncfusion/ej2-react-barcode-generator": "latest",
     "@syncfusion/ej2-react-base": "latest",
     "@syncfusion/ej2-react-buttons": "latest",
@@ -38,28 +38,28 @@
     "@syncfusion/ej2-react-spreadsheet": "latest",
     "@syncfusion/ej2-react-treegrid": "latest",
     "@syncfusion/ej2-react-treemap": "latest",
-    "@testing-library/jest-dom": "^5.1.1",
+    "@testing-library/jest-dom": "^5.3.0",
     "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^10.0.0",
+    "@testing-library/user-event": "^10.0.1",
     "@types/jest": "^25.1.4",
     "@types/node": "^13.9.1",
-    "@types/react": "^16.9.23",
-    "@types/react-dom": "^16.9.5",
+    "@types/react": "^16.9.31",
+    "@types/react-dom": "^16.9.6",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-bootstrap": "^0.24.5",
     "bootstrap": "^4.4.1",
-    "i18next": "^19.3.2",
+    "i18next": "^19.3.4",
     "i18next-browser-languagedetector": "latest",
-    "react": "^16.13.0",
-    "react-bootstrap": "^1.0.0-beta.17",
-    "react-dom": "^16.13.0",
-    "react-i18next": "^11.3.3",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.0.0",
+    "react-dom": "^16.13.1",
+    "react-i18next": "^11.3.4",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "react-use": "^13.27.0",
+    "react-use": "^13.27.1",
     "redux": "^4.0.5",
     "typescript": "^3.8.3"
   },
@@ -83,5 +83,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "css-loader": "^3.4.2",
+    "less": "^3.11.1",
+    "less-loader": "^5.0.0",
+    "style-loader": "^1.1.3"
   }
 }
