--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "i18next": "^19.3.4",
     "i18next-browser-languagedetector": "latest",
     "node-sass": "^4.13.1",
+    "rc-switch": "^1.9.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
