--- a/package.json
+++ b/package.json
@@ -7,55 +7,55 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
-    "@reduxjs/toolkit": "^1.3.2",
+    "@reduxjs/toolkit": "^1.3.5",
     "@svgr/webpack": "4.3.3",
     "@syncfusion/ej2-react-barcode-generator": "latest",
     "@syncfusion/ej2-react-base": "latest",
     "@syncfusion/ej2-react-buttons": "latest",
-    "@syncfusion/ej2-react-calendars": "latest",
-    "@syncfusion/ej2-react-charts": "latest",
+    "@syncfusion/ej2-react-calendars": "^18.1.44",
+    "@syncfusion/ej2-react-charts": "^18.1.44",
     "@syncfusion/ej2-react-circulargauge": "latest",
     "@syncfusion/ej2-react-diagrams": "latest",
-    "@syncfusion/ej2-react-documenteditor": "latest",
-    "@syncfusion/ej2-react-dropdowns": "latest",
+    "@syncfusion/ej2-react-documenteditor": "^18.1.44",
+    "@syncfusion/ej2-react-dropdowns": "^18.1.44",
     "@syncfusion/ej2-react-filemanager": "latest",
-    "@syncfusion/ej2-react-gantt": "latest",
-    "@syncfusion/ej2-react-grids": "latest",
+    "@syncfusion/ej2-react-gantt": "^18.1.44",
+    "@syncfusion/ej2-react-grids": "^18.1.44",
     "@syncfusion/ej2-react-heatmap": "latest",
     "@syncfusion/ej2-react-inplace-editor": "latest",
-    "@syncfusion/ej2-react-inputs": "latest",
-    "@syncfusion/ej2-react-layouts": "latest",
+    "@syncfusion/ej2-react-inputs": "^18.1.44",
+    "@syncfusion/ej2-react-layouts": "^18.1.44",
     "@syncfusion/ej2-react-lineargauge": "latest",
-    "@syncfusion/ej2-react-lists": "latest",
+    "@syncfusion/ej2-react-lists": "^18.1.44",
     "@syncfusion/ej2-react-maps": "latest",
     "@syncfusion/ej2-react-navigations": "latest",
     "@syncfusion/ej2-react-notifications": "latest",
-    "@syncfusion/ej2-react-pdfviewer": "latest",
-    "@syncfusion/ej2-react-pivotview": "latest",
-    "@syncfusion/ej2-react-popups": "latest",
-    "@syncfusion/ej2-react-querybuilder": "latest",
-    "@syncfusion/ej2-react-richtexteditor": "latest",
-    "@syncfusion/ej2-react-schedule": "latest",
+    "@syncfusion/ej2-react-pdfviewer": "^18.1.44",
+    "@syncfusion/ej2-react-pivotview": "^18.1.44",
+    "@syncfusion/ej2-react-popups": "^18.1.44",
+    "@syncfusion/ej2-react-querybuilder": "^18.1.44",
+    "@syncfusion/ej2-react-richtexteditor": "^18.1.44",
+    "@syncfusion/ej2-react-schedule": "^18.1.44",
     "@syncfusion/ej2-react-splitbuttons": "latest",
-    "@syncfusion/ej2-react-spreadsheet": "latest",
+    "@syncfusion/ej2-react-spreadsheet": "^18.1.44",
     "@syncfusion/ej2-react-treegrid": "latest",
     "@syncfusion/ej2-react-treemap": "latest",
-    "@testing-library/jest-dom": "^5.3.0",
+    "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^10.0.1",
-    "@types/jest": "^25.1.4",
-    "@types/node": "^13.9.1",
-    "@types/react": "^16.9.31",
+    "@testing-library/user-event": "^10.0.2",
+    "@types/jest": "^25.2.1",
+    "@types/node": "^13.13.1",
+    "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-bootstrap": "^0.24.5",
-    "@typescript-eslint/eslint-plugin": "^2.10.0",
-    "@typescript-eslint/parser": "^2.10.0",
+    "@typescript-eslint/eslint-plugin": "^2.28.0",
+    "@typescript-eslint/parser": "^2.28.0",
     "babel-eslint": "10.0.3",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.0.6",
     "babel-plugin-named-asset-import": "^0.3.6",
-    "babel-preset-react-app": "^9.1.1",
+    "babel-preset-react-app": "^9.1.2",
     "bootstrap": "^4.4.1",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
@@ -63,7 +63,7 @@
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "eslint": "^6.6.0",
-    "eslint-config-react-app": "^5.2.0",
+    "eslint-config-react-app": "^5.2.1",
     "eslint-loader": "3.0.3",
     "eslint-plugin-flowtype": "4.6.0",
     "eslint-plugin-import": "2.20.0",
@@ -73,8 +73,8 @@
     "file-loader": "4.3.0",
     "fs-extra": "^8.1.0",
     "html-webpack-plugin": "4.0.0-beta.11",
-    "i18next": "^19.3.4",
-    "i18next-browser-languagedetector": "latest",
+    "i18next": "^19.4.3",
+    "i18next-browser-languagedetector": "^4.1.1",
     "identity-obj-proxy": "3.0.0",
     "jest": "24.9.0",
     "jest-environment-jsdom-fourteen": "1.0.1",
@@ -93,9 +93,9 @@
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
     "react-bootstrap": "^1.0.0",
-    "react-dev-utils": "^10.2.0",
+    "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
-    "react-i18next": "^11.3.4",
+    "react-i18next": "^11.3.5",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-bootstrap": "^0.25.0",
